<resources>
    <string name="app_name">Andre Zeromski - Midtronics Project</string>
    <string name="andre_zeromski">Andre Zeromski</string>
    <string name="profile_picture">profile_picture</string>
    <string name="education">Education</string>
    <string name="my_education">\t I am currently pursuing a Master\'s degree in Computer Science
        from the University of Illinois at Urbana-Champaign, with an expected graduation date in
        December 2023. Additionally, I hold a Bachelor\'s degree in Economics, with a minor in
        Computer Science, from Washington and Lee University, where I graduated cum laude with a
        3.8/4.0 GPA.\n\t My technical proficiency encompasses numerous programming languages and
        technologies. Specifically, I am experienced in Python, Java, C++, JavaScript, MySQL,
        MongoDB, and Git, while also maintaining a familiarity with C, Gradle, GDB, HTML, CSS,
        Maven, Ant, and Neo4j. Furthermore, I am no stranger to various other technologies,
        including x86 AT&amp;T Assembly, PyTorch, TensorFlow, gRPC, CloudLab, and Android Studio.
        \n\t The coursework I have undertaken throughout my academic career is diverse and
        comprehensive, covering an array of computer science topics. Broadly, they include
        distributed systems, software engineering, natural language processing, cloud networking,
        database systems, computer security, algorithms and data structures, and computer
        architecture.\n\t In addition to my academic pursuits, I have been honored with several
        accolades, including the President\'s List in both 2018 and 2020, as well as the Kemper
        Scholar award. My interests in computer science are multifaceted, with particular emphasis
        on software engineering and distributed systems. With my educational experiences and
        expertise, I am excited to make significant contributions in any team I am a part of.</string>
    <string name="work_experience">Work Experience</string>
    <string name="my_work_experience">\t As an investment analyst at the Kemper Corporation, I
        conducted in-depth research reports on municipal and corporate bond issuers, providing the
        Portfolio Management team with daily updates on my findings. Ultimately, I led the analysis
        which underpinned buy and sell decisions for the $2.2 billion municipal bond portfolio that
        the investments team managed on behalf of our institutional clients.\n\t While my
        professional experience was primarily in financial analysis, I nonetheless incorporated
        computer science into my work. Leveraging my experience in Python, I developed a webscraper
        using BeautifulSoup, Selenium, and Scrapy to extract relevant publications from four popular
        financial news websites daily. This automation effort saved the investment team considerable
        time, as we applied to monitor over 1000 different issuers held in our portfolio.
        Furthermore, I relied heavily on pandas, Matplotlib, and NumPy to create compelling reports
        and analysis to supplement my research findings.\n\t During my time as a graduate student, I
        have had the pleasure to work on three different computer science projects. Most relevant to
        this role, I worked on a City Map and Weather mobile app in Android Studio, where I was
        responsible for incorporating Google weather and map APIs to deliver information to users.
        Furthermore, I was responsible for implementing features that allowed users to change the
        app\'s color scheme. Lastly, I wrote unit and integration tests using Espresso.</string>
    <string name="why_midtronics">Why I want to be a part of Midtronics</string>
    <string name="my_why_midtronics">\t Working as an Android Developer intern at Midtronics is
        appealing for several reasons. Firstly, the field of electric vehicles is rapidly growing,
        and being a part of a company that contributes to this industry is exciting and rewarding.
        Additionally, battery equipment for electric vehicles is a complex and challenging field,
        providing opportunities to engage with sophisticated technology and to be a part of that
        innovation. Furthermore, the prospect of working in a sector that has a favorable impact on
        the environment aligns with my values and seems like it would be a fulfilling career.
        Finally, my conversations with Antonia and Dave have made me appreciate the work culture
        at Midtronics, where individual impacts appear to genuinely matter, and where colleagues
        encourage each other\'s professional development.</string>
    <string name="search_countries">Search Countries</string>
    <string name="country_list">Choose a Country</string>
    <string name="back_to_profile">Back to Profile</string>
    <string name="Labels">Capital:\nPopulation:\nArea:\nRegion:\nSubregion:</string>
    <string name="back_to_country_list">Back To Country List</string>
</resources>