<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/andre_zeromski"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"/>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/name"
        android:layout_above="@id/countryButton">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="457dp"
                app:srcCompat="@drawable/img_1828"
                android:contentDescription="@string/profile_picture" />
            <TextView
                android:id="@+id/education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/education"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/educationDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_education"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/workExperience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/work_experience"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/workExperienceDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_work_experience"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/whyMidtronics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/why_midtronics"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/whyMidtronicsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_why_midtronics"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/countryButton"
        android:layout_alignParentBottom="true"
        android:layout_width="229dp"
        android:layout_height="57dp"
        android:text="@string/search_countries"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        app:iconTint="@color/purple_700" />
</RelativeLayout>